Correct win modal spacing

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -258,7 +258,7 @@ ul, li {
   max-width: 500px;
   text-align: center;
   align-items: center;
-  margin: 20% auto;
+  margin: 10% auto;
   border: 1px solid #43464B;
   background: #fff;
   padding: 20px;
